RESOLVED FIXED141214
[iOS] Selection callout does not follow selection when double-tap scrolling
https://bugs.webkit.org/show_bug.cgi?id=141214
Summary [iOS] Selection callout does not follow selection when double-tap scrolling
Joseph Pecoraro
Reported 2015-02-03 15:17:04 PST
* SUMMARY Selection callout does not follow selection when double-tap scrolling. Compare to zooming / scrolling manually. * STEPS TO REPRODUCE 1. Load <http://www.cnn.com/2015/02/02/us/airport-security-investigation/index.html> 2. Select some text to get a callout bar 3. Double tap to scroll to a different paragraph => expected callout bar to follow selection, it did not
Attachments
[PATCH] Proposed Fix (2.50 KB, patch)
2015-02-03 15:20 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-02-03 15:17:25 PST
Joseph Pecoraro
Comment 2 2015-02-03 15:20:09 PST
Created attachment 245975 [details] [PATCH] Proposed Fix I suppose other places that call setContentOffset:animated: directly might have the same problem?
Benjamin Poulain
Comment 3 2015-02-04 19:45:53 PST
Comment on attachment 245975 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=245975&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1415 > +- (void)scrollViewDidEndScrollingAnimation:(UIScrollView *)scrollView > +{ > + [self _didFinishScrolling]; > +} > + Ooops, this is pretty important.
WebKit Commit Bot
Comment 4 2015-02-04 20:28:45 PST
Comment on attachment 245975 [details] [PATCH] Proposed Fix Clearing flags on attachment: 245975 Committed r179668: <http://trac.webkit.org/changeset/179668>
WebKit Commit Bot
Comment 5 2015-02-04 20:28:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.