[iOS] Selection callout does not follow selection when double-tap scrolling https://bugs.webkit.org/show_bug.cgi?id=141214

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-02-04
Reviewed by Benjamin Poulain.

Implement the delegate that gets called after UIScrollView
setContentOffset animations. When scrolling to a rect, do the normal
willScroll, didScroll actions to update the selection assistant.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _scrollToRect:origin:minimumScrollDistance:]):
(-[WKWebView scrollViewDidEndScrollingAnimation:]):

Canonical link: https://commits.webkit.org/159297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179668 268f45cc-cd09-0410-ab3c-d52691b4dbfc